[FIX] fixed layout bug when admin options were highlighted

--- a/themes/base_files/scss/_tiki-miscellaneous_global.scss
+++ b/themes/base_files/scss/_tiki-miscellaneous_global.scss
@@ -44,7 +44,7 @@ div.highlight {
 
 // ...except for admin preference blocks
 div.highlight.adminoptionbox {
-	display: flex;
+	display: block;
 	padding: 1rem;
 	margin-left: -1rem;
 	margin-right: -1rem;
